@startuml ERD_01_Database_Design
' ============================================================
' Title  : Database ERD — QA Studio Platform (Yetiforce)
' Version: 1.0
' Export : java -jar plantuml.jar docs/uml/erd/ERD_01_database_design.puml -tpng -o ./output
'          Recommended: -tsvg for scalable vector output
' ============================================================
!theme plain
skinparam handwritten false
skinparam shadowing false
skinparam entityBackgroundColor #FFFFFF
skinparam entityBorderColor #333333
skinparam arrowColor #444444
skinparam defaultFontSize 11
skinparam defaultFontName Arial
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 55

hide circle
hide methods

title Database Design — QA Studio Platform

' ========================
' PROJECTS
' ========================
entity "projects" as projects {
  * id               : UUID         <<PK>>
  --
  * name             : VARCHAR(255) <<UNIQUE>>
  description        : TEXT
  * katalon_project_path : TEXT
  created_at         : TIMESTAMPTZ
  updated_at         : TIMESTAMPTZ
}

' ========================
' TEST SUITES
' ========================
entity "test_suites" as test_suites {
  * id         : UUID         <<PK>>
  --
  * project_id : UUID         <<FK>>
  * name       : VARCHAR(255)
  description  : TEXT
  created_at   : TIMESTAMPTZ
  updated_at   : TIMESTAMPTZ
}

' ========================
' TEST CASES
' ========================
entity "test_cases" as test_cases {
  * id               : UUID         <<PK>>
  --
  * project_id       : UUID         <<FK>>
  * name             : VARCHAR(255)
  description        : TEXT
  expected_result    : TEXT
  script_content     : TEXT
  target_url         : TEXT
  scanned_dom_json   : JSONB
  created_at         : TIMESTAMPTZ
  updated_at         : TIMESTAMPTZ
}

' ========================
' TEST CASE STEPS (RECURSIVE)
' ========================
entity "test_case_steps" as test_case_steps {
  * id               : UUID         <<PK>>
  --
  * test_case_id     : UUID         <<FK>>
  parent_step_id     : UUID         <<FK, self-ref>>
  * title            : VARCHAR(255)
  description        : TEXT
  expected_result    : TEXT
  step_order         : INTEGER
  created_at         : TIMESTAMPTZ
  updated_at         : TIMESTAMPTZ
}

' ========================
' TEST CASE DATA SETS
' ========================
entity "test_case_data_sets" as test_case_data_sets {
  * id             : UUID         <<PK>>
  --
  * test_case_id   : UUID         <<FK>>
  * name           : VARCHAR(255)
  data_json        : JSONB
  created_at       : TIMESTAMPTZ
  updated_at       : TIMESTAMPTZ
}

' ========================
' SUITE–TEST CASE LINKS (JUNCTION)
' ========================
entity "suite_test_case_links" as suite_links {
  * id              : UUID    <<PK>>
  --
  * suite_id        : UUID    <<FK>> <<UNIQUE with exec_order>>
  * test_case_id    : UUID    <<FK>> <<UNIQUE with suite_id>>
  * execution_order : INTEGER
  created_at        : TIMESTAMPTZ
  updated_at        : TIMESTAMPTZ
}

' ========================
' EXECUTION RUNS
' ========================
entity "katalon_execution_runs" as exec_runs {
  * id                    : UUID          <<PK>>
  --
  project_id              : UUID          <<FK, SET NULL>>
  * project_path          : TEXT
  * suite_path            : TEXT
  suite_name              : TEXT
  browser                 : VARCHAR(50)
  os                      : VARCHAR(100)
  profile                 : VARCHAR(100)
  * status                : VARCHAR(50)
  exit_code               : INTEGER
  duration_ms             : BIGINT
  total_tests             : INTEGER
  passed_tests            : INTEGER
  failed_tests            : INTEGER
  skipped_tests           : INTEGER
  error_message           : TEXT
  report_path             : TEXT
  parse_warning           : TEXT
  created_at              : TIMESTAMPTZ
  ended_at                : TIMESTAMPTZ
  updated_at              : TIMESTAMPTZ
}

' ========================
' EXECUTION LOGS (STREAM)
' ========================
entity "katalon_execution_logs" as exec_logs {
  * id        : UUID         <<PK>>
  --
  * run_id    : UUID         <<FK>>
  level       : VARCHAR(20)
  * message   : TEXT
  logged_at   : TIMESTAMPTZ
}

' ========================
' EXECUTION RUN DETAILS (PER TEST CASE)
' ========================
entity "execution_run_details" as exec_details {
  * id              : UUID         <<PK>>
  --
  * run_id          : UUID         <<FK>>
  * test_case_name  : TEXT
  * status          : VARCHAR(50)
  duration_ms       : BIGINT
  error_message     : TEXT
  stack_trace       : TEXT
  created_at        : TIMESTAMPTZ
}

' ========================
' RELATIONSHIPS
' ========================

projects        ||--o{  test_suites         : "project_id"
projects        ||--o{  test_cases          : "project_id"
projects        ||--o{  exec_runs           : "project_id"

test_suites     ||--o{  suite_links         : "suite_id"
test_cases      ||--o{  suite_links         : "test_case_id"

test_cases      ||--o{  test_case_steps     : "test_case_id"
test_case_steps ||--o{  test_case_steps     : "parent_step_id"

test_cases      ||--o{  test_case_data_sets : "test_case_id"

exec_runs       ||--o{  exec_logs           : "run_id"
exec_runs       ||--o{  exec_details        : "run_id"

@enduml
